--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -822,7 +822,7 @@ img { max-width: 100%; height: auto; display: block; }
 #home .home__role {
   display: inline-block;
   margin-top: 0.15em;
-  font-size: 0.10em;
+  font-size: clamp(1.2rem, 4vw, 2rem);
   font-weight: 600;
   opacity: 0.6;
   text-transform: lowercase;
